# genomeshader

./: .bumpversion.cfg  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  DEVELOP.rst  README.rst  VERSION  dev-requirements.txt  js-test.ipynb  playground.ipynb  playground.ipynb.REMOVED.git-id  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: ci.yml  dev-wheels.yml  publish.yml  release-please.yml  release.yml
html/: focus_mode.js  instanced-renderer.js  template.html  text-renderer.js
python/: Cargo.toml
python/genomeshader/: __init__.py  staging.py  view.py
python/genomeshader/html/: body.html  instanced-renderer.js  sankey-renderer.js  styles.css  template.html  tubemap-renderer.js  webgpu-core.js
python/genomeshader/html/scripts/: cleanup.js  dom-utils.js  interaction.js  jupyter-comms.js  main.js  rendering.js  smart-tracks.js  tracks.js  ui-state.js  view-state.js  webgpu-bezier.js  webgpu-core.js  webgpu-renderer.js
python/tests/: README.md  test_view.py  test_view_simple.py
src/: alignment.rs  app.rs  env.rs  events.rs  layout.rs  lib.rs  main.rs  stage.rs  storage.rs  storage_gcs.rs  storage_local.rs  styles.rs  variants.rs
src/tests/: make_test_read.sh
