[package]
name = "genomeshader"
version = "0.1.18"
authors = ["Kiran V Garimella <kiran@broadinstitute.org>"]
edition = "2021"
license = "BSD 3-Clause"
readme = "README.rst"
homepage = "https://github.com/broadinstitute/genomeshader"
repository = "https://github.com/broadinstitute/genomeshader.git"
description = "Fast visualization of genomic data"
documentation = "https://github.com/broadinstitute/genomeshader"

[lib]
name = "genomeshader"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
cloud-storage = { version = "*", features = ["sync"] }
chrono = "*"
crossbeam-utils = "0.8.19"
#egui = "0.23.0"
#eframe = "*"
fs_extra = "1.2"
kdam = { version = "*", features = ["notebook", "rayon"] }
google-cloud-storage = "*"
glob = "0.3"
indicatif = { version = "*", features = ["rayon"] }
lazy_static = "*"
#nannou = { git = "https://github.com/tychedelia/nannou.git" }
#nannou_egui = { git = "https://github.com/tychedelia/nannou.git" }
openssl = { version = "0.10", features = ["vendored"] }
polars = { version = "*", features = ["performant", "parquet", "dtype-categorical", "fmt", "rows"] }
pollster = "0.3"
pyo3 = { version = "*", features = ["abi3-py37", "extension-module"] }
pyo3-polars = "*"
pyo3-asyncio = { version = "*", features = ["attributes", "async-std-runtime", "tokio-runtime"] }
memoffset = "0.9.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
rand = "*"
rayon = "*"
regex = "*"
rust-htslib = { version = "*", features = ["gcs"] }
sprs = "0.11.1"
sys-info = "0.9.1"
tokio = "*"
url = "*"

#winit = "*"
#async-std = { version = "1.10.0", features = ["unstable"] }

# web:
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm-bindgen-futures = "0.4"
#wasm-bindgen = "0.2.83"

[profile.release]
opt-level = 2 # fast and small wasm