[package]
name = "genomeshader"
version = "0.1.43"
authors = ["Kiran V Garimella <kiran@broadinstitute.org>"]
edition = "2021"
license = "BSD 3-Clause"
readme = "README.rst"
homepage = "https://github.com/broadinstitute/genomeshader"
repository = "https://github.com/broadinstitute/genomeshader.git"
description = "Fast visualization of genomic data"
documentation = "https://github.com/broadinstitute/genomeshader"

[lib]
name = "genomeshader"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
backoff = "0.4.0"
cloud-storage = { version = "*", features = ["sync"] }
chrono = "*"
crossbeam-utils = "0.8.19"
fs_extra = "1.2"
kdam = { version = "*", features = ["notebook", "rayon"] }
gag = "*"
google-cloud-storage = "*"
glob = "0.3"
humansize = "*"
indicatif = { version = "*", features = ["rayon"] }
iset = "0.2.2"
lazy_static = "*"
openssl = { version = "0.10", features = ["vendored"] }
polars = { version = "0.36.2", features = ["performant", "parquet", "dtype-categorical", "fmt", "rows", "lazy", "horizontal_concat"] }
pyo3 = { version = "*", features = ["abi3-py37", "extension-module"] }
pyo3-polars = "0.10.0"
pyo3-asyncio = { version = "*", features = ["attributes", "async-std-runtime", "tokio-runtime"] }
memoffset = "0.9.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
rand = "*"
rayon = "*"
regex = "*"
rust-htslib = { version = "*", features = ["curl", "gcs"] }
sprs = "0.11.1"
sys-info = "0.9.1"
tokio = "*"
url = "*"
#egui = "0.23.0"
#eframe = "*"
#nannou = { git = "https://github.com/tychedelia/nannou.git" }
#nannou_egui = { git = "https://github.com/tychedelia/nannou.git" }
#pollster = "0.3"