[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "genomeshader"
version = "0.2.0"
dependencies = [
    "polars",
    "requests",
    "requests-cache",
    "ipywidgets>=8.0.0",
    "google-cloud-storage",
]

[tool.maturin]
python-source = "python"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
