[package]
name = "py-genomeshader"
version = "0.1.0"
authors = ["Kiran V Garimella <kiran@broadinstitute.org>"]
edition = "2018"
license = "MIT"
keywords = ["genomeshader"]
readme = "README.rst"
homepage = "https://github.com/broadinstitute/genomeshader/"
repository = "https://github.com/broadinstitute/genomeshader.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "genomeshader"
crate-type = ["cdylib"]

[dependencies]
genomeshader = { package = "genomeshader", version = "0.1.0" }
pyo3 = { version = "*", features = ["abi3-py37", "extension-module"] }